# template-rust

./: Cargo.toml  Makefile  README.md
crates/bin-client/: Cargo.toml
crates/bin-client/src/: main.rs
crates/bin-server/: Cargo.toml
crates/bin-server/src/: main.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
